// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Account/Authentication Google 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c1 svg + span {
  margin-left: 4px;
}

.c2 {
  padding: 0;
  height: 40px;
  width: 40px;
}

.c3 {
  color: #353535;
  background-color: transparent;
  border-color: transparent;
}

.c3:not([disabled]):hover,
.c3:not([disabled]):focus {
  color: #1a9bc7;
  background-color: transparent;
  border-color: transparent;
}

.c3:not([disabled]):active {
  color: #0d79d0;
  background-color: transparent;
  border-color: transparent;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c6 {
  color: #6e6e6e;
}

.c4 {
  margin: 4px;
  padding: 0 16px;
  width: auto;
}

.c5 {
  height: 40px;
  margin: -4px 0 0 -4px;
}

<div
  className="c0"
>
  <div>
    <button
      className="c1 c2 c3 c4"
      type="button"
    >
      <span
        className="c5"
      >
        <svg
          height={45}
          size={45}
          title="Google logo"
          width={45}
        >
          <defs>
            <filter
              filterUnits="objectBoundingBox"
              height="200%"
              id="google-a"
              width="200%"
              x="-50%"
              y="-50%"
            >
              <feOffset
                dy={1}
                in="SourceAlpha"
                result="shadowOffsetOuter1"
              />
              <feGaussianBlur
                in="shadowOffsetOuter1"
                result="shadowBlurOuter1"
                stdDeviation={0.5}
              />
              <feColorMatrix
                in="shadowBlurOuter1"
                result="shadowMatrixOuter1"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.168 0"
              />
              <feOffset
                in="SourceAlpha"
                result="shadowOffsetOuter2"
              />
              <feGaussianBlur
                in="shadowOffsetOuter2"
                result="shadowBlurOuter2"
                stdDeviation={0.5}
              />
              <feColorMatrix
                in="shadowBlurOuter2"
                result="shadowMatrixOuter2"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.084 0"
              />
              <feMerge>
                <feMergeNode
                  in="shadowMatrixOuter1"
                />
                <feMergeNode
                  in="shadowMatrixOuter2"
                />
                <feMergeNode
                  in="SourceGraphic"
                />
              </feMerge>
            </filter>
            <rect
              height={40}
              id="google-b"
              rx={2}
              width={40}
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <g
              filter="url(#google-a)"
              transform="translate(3 3)"
            >
              <use
                fill="#FFF"
                xlinkHref="#google-b"
              />
              <use
                xlinkHref="#google-b"
              />
              <use
                xlinkHref="#google-b"
              />
              <use
                xlinkHref="#google-b"
              />
            </g>
            <path
              d="M31.64 23.205c0-.639-.057-1.252-.164-1.841H23v3.481h4.844a4.14 4.14 0 0 1-1.796 2.716v2.259h2.908c1.702-1.567 2.684-3.875 2.684-6.615z"
              fill="#4285F4"
            />
            <path
              d="M23 32c2.43 0 4.467-.806 5.956-2.18l-2.908-2.259c-.806.54-1.837.86-3.048.86-2.344 0-4.328-1.584-5.036-3.711h-3.007v2.332A8.997 8.997 0 0 0 23 32z"
              fill="#34A853"
            />
            <path
              d="M17.964 24.71a5.41 5.41 0 0 1-.282-1.71c0-.593.102-1.17.282-1.71v-2.332h-3.007A8.996 8.996 0 0 0 14 23c0 1.452.348 2.827.957 4.042l3.007-2.332z"
              fill="#FBBC05"
            />
            <path
              d="M23 17.58c1.321 0 2.508.454 3.44 1.345l2.582-2.58C27.463 14.891 25.426 14 23 14a8.997 8.997 0 0 0-8.043 4.958l3.007 2.332c.708-2.127 2.692-3.71 5.036-3.71z"
              fill="#EA4335"
            />
            <path
              d="M14 14h18v18H14V14z"
            />
          </g>
        </svg>
      </span>
      <div
        className="c6"
      >
        Google
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Account/Authentication Orcid 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c1 svg + span {
  margin-left: 4px;
}

.c2 {
  padding: 0;
  height: 40px;
  width: 40px;
}

.c3 {
  color: #353535;
  background-color: transparent;
  border-color: transparent;
}

.c3:not([disabled]):hover,
.c3:not([disabled]):focus {
  color: #1a9bc7;
  background-color: transparent;
  border-color: transparent;
}

.c3:not([disabled]):active {
  color: #0d79d0;
  background-color: transparent;
  border-color: transparent;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

<div
  className="c0"
>
  <div>
    <button
      className="c1 c2 c3"
      type="button"
    >
      <svg
        height={48}
        size={48}
        viewBox="0 0 256 256"
        width={48}
      >
        <path
          d="M256 128c0 70.7-57.3 128-128 128S0 198.7 0 128 57.3 0 128 0s128 57.3 128 128z"
          fill="#a6ce39"
        />
        <path
          d="M86.3 186.2H70.9V79.1h15.4v107.1zm22.6-107.1h41.6c39.6 0 57 28.3 57 53.6 0 27.5-21.5 53.6-56.8 53.6h-41.8V79.1zm15.4 93.3h24.5c34.9 0 42.9-26.5 42.9-39.7C191.7 111.2 178 93 148 93h-23.7v79.4zM88.7 56.8c0 5.5-4.5 10.1-10.1 10.1s-10.1-4.6-10.1-10.1c0-5.6 4.5-10.1 10.1-10.1s10.1 4.6 10.1 10.1z"
          fill="#fff"
        />
      </svg>
    </button>
  </div>
</div>
`;
